--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ dotenvy = "0.15.7"
 gemini-rs = "0.4.2"
 termimad = "0.31.2"
 tokio = "1.43.0"
+uuid = { version = "1.14.0", features = ["v4"] }
+dirs = "6.0.0"
 
 [[bin]]
 name = "geminate"
