--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ termimad = "0.31.2"
 tokio = "1.43.0"
 uuid = { version = "1.14.0", features = ["v4"] }
 dirs = "6.0.0"
+rusqlite = "0.34.0"
 
 [[bin]]
 name = "geminate"
