--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 GEMINIAI_API="your-gemini-api-key"
+# Developer mode (optional) Leave blank if you're not tweaking this project else set as "dev"
+ENVIRONMENT=""
